[gd_scene load_steps=11 format=3 uid="uid://d2hfjnc2wklff"]

[ext_resource type="Texture2D" uid="uid://c25h250ckii57" path="res://wall2.png" id="1_1nfnj"]
[ext_resource type="Script" path="res://stages/MenuNode.gd" id="2_1nr13"]
[ext_resource type="FontFile" uid="uid://6kq3p662glb5" path="res://font/hellodenverdisplaybold_v1.6.woff" id="2_xxtwi"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4lqen"]
albedo_texture = ExtResource("1_1nfnj")

[sub_resource type="BoxMesh" id="BoxMesh_y0v07"]
material = SubResource("StandardMaterial3D_4lqen")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_30ts4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7rbks"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jqtgj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vrlcc"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_p27oh"]

[node name="Menu" type="CanvasLayer"]

[node name="Node3D" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Node3D"]
transform = Transform3D(5.99652, 0, 0, 0, 2.99826, 0, 0, 0, 0.999419, 0, 0, -1.67895)
mesh = SubResource("BoxMesh_y0v07")

[node name="SubViewportContainer" type="SubViewportContainer" parent="Node3D"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
metadata/_edit_use_anchors_ = true

[node name="SubViewport" type="SubViewport" parent="Node3D/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="Camera3D" type="Camera3D" parent="Node3D/SubViewportContainer/SubViewport"]
current = true

[node name="MenuNode" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource("2_1nr13")

[node name="MarginContainer" type="MarginContainer" parent="MenuNode"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 80

[node name="VBoxContainer" type="VBoxContainer" parent="MenuNode/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Title" type="Label" parent="MenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.329412, 0.431373, 1)
theme_override_colors/font_shadow_color = Color(0.858824, 0.160784, 0.317647, 1)
theme_override_colors/font_outline_color = Color(0.764706, 0, 0.117647, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_constants/outline_size = 20
theme_override_fonts/font = ExtResource("2_xxtwi")
theme_override_font_sizes/font_size = 150
text = "PROJECT NEON"

[node name="Versus" type="Button" parent="MenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0.831373, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.537255, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xxtwi")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_30ts4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7rbks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jqtgj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vrlcc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p27oh")
text = "VERSUS"
alignment = 0

[node name="Training" type="Button" parent="MenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0.831373, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.537255, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xxtwi")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_30ts4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7rbks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jqtgj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vrlcc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p27oh")
text = "TRAINING"
alignment = 0

[node name="Settings" type="Button" parent="MenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0.831373, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.537255, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xxtwi")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_30ts4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7rbks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jqtgj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vrlcc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p27oh")
text = "SETTINGS"
alignment = 0

[node name="Quit" type="Button" parent="MenuNode/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0.831373, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.537255, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("2_xxtwi")
theme_override_font_sizes/font_size = 100
theme_override_styles/normal = SubResource("StyleBoxEmpty_30ts4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7rbks")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_jqtgj")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_vrlcc")
theme_override_styles/focus = SubResource("StyleBoxEmpty_p27oh")
text = "QUIT"
alignment = 0

[connection signal="pressed" from="MenuNode/MarginContainer/VBoxContainer/Versus" to="MenuNode" method="_on_versus_pressed"]
[connection signal="pressed" from="MenuNode/MarginContainer/VBoxContainer/Training" to="MenuNode" method="_on_training_pressed"]
[connection signal="pressed" from="MenuNode/MarginContainer/VBoxContainer/Settings" to="MenuNode" method="_on_settings_pressed"]
[connection signal="pressed" from="MenuNode/MarginContainer/VBoxContainer/Quit" to="MenuNode" method="_on_quit_pressed"]
